Forgot to add Maven env